--- a/nphot/zeropints.ipynb
+++ b/nphot/zeropints.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "3f319cb8",
    "metadata": {},
    "outputs": [],
@@ -10,7 +10,8 @@
     "import numpy as np\n",
     "from rubin_sim.data import get_data_dir\n",
     "from rubin_sim.photUtils import Bandpass, PhotometricParameters\n",
-    "import os"
+    "import os\n",
+    "import rubin_sim.utils as rsUtils\n"
    ]
   },
   {
@@ -64,11 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "188bf44e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'u': 0.502296,\n",
+       " 'g': 0.213738,\n",
+       " 'r': 0.125886,\n",
+       " 'i': 0.096182,\n",
+       " 'z': 0.068623,\n",
+       " 'y': 0.169504}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# and the atmospheric extinction k values\n",
+    "syseng = rsUtils.SysEngVals()\n",
+    "syseng.kAtm"
+   ]
   },
   {
    "cell_type": "code",
