swap to stacker

--- a/saturation_sky/test_skysaturation_metric.ipynb
+++ b/saturation_sky/test_skysaturation_metric.ipynb
@@ -61,7 +61,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Querying table None with no constraint for columns ['numExposures', 'filter', 'skyBrightness', 'visitExposureTime'].\n",
+      "Querying table None with no constraint for columns ['seeingFwhmEff', 'visitExposureTime', 'airmass', 'filter', 'numExposures', 'skyBrightness'].\n",
       "Found 2086980 visits\n",
       "Running:  ['opsim_SkySaturation_UNIS']\n",
       "Completed metric generation.\n",
