--- a/sat_eff/Satellite_dodging.ipynb
+++ b/sat_eff/Satellite_dodging.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a08078be",
+   "id": "ac543f55",
    "metadata": {},
    "source": [
     "Some thoughts on doing satellite dodging"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e3699479",
+   "id": "c9de5c70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5e5ffd62",
+   "execution_count": 2,
+   "id": "44318d36",
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "77.92207792207793"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c88938ab",
+   "id": "aceeba95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,25 +56,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0b11b5c1",
+   "execution_count": 7,
+   "id": "16ac23de",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2400000 pixels hit, or 0.075000% of pixels\n"
+      "4800000 pixels hit, or 0.158940% of pixels\n"
      ]
     }
    ],
    "source": [
     "# How much does a giant streak impact an observation?\n",
-    "total_pix = 3.2e9\n",
+    "total_pix = 3.02e9  # Total number of pixels\n",
     "# we have 4kx4k CCDs, in 3x3 rafts. Full diameter is 5 rafts. \n",
     "scale = 0.2 # arcsec/pix\n",
     "length = 4e3*3*5  # pix\n",
-    "width = 40  # pix\n",
+    "width = 80  # pix\n",
     "pix_hit = length*width\n",
     "\n",
     "print('%i pixels hit, or %f%% of pixels' % (pix_hit, pix_hit/total_pix*100))"
@@ -83,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "80e8b6e8",
+   "id": "92406b18",
    "metadata": {},
    "outputs": [
     {
@@ -104,14 +104,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "98d57796",
+   "execution_count": 9,
+   "id": "01097918",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Taking one extra second to dodge, we lose 2% of our efficency, all to save 0.07% of \n",
+    "# Taking one extra second to dodge, we lose 2% of our efficency, all to save 0.15% of \n",
     "# the pixels from being hit. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08cf78a0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa147443",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
