--- a/sat_eff/Satellite_dodging.ipynb
+++ b/sat_eff/Satellite_dodging.ipynb
@@ -122,9 +122,25 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "2656722b",
+   "metadata": {},
+   "source": [
+    "How could we dodge satellites? \n",
+    "\n",
+    "The easiest way would be to forcast where there will be LOTS of satellites in the next hour, and try to avoid that part of the sky. This has the advantage of being fairly computationally cheap (just need to compute where we think thigs will be in the next ~hour). Doesn't need to be high precision. Easily fits in with out MDP system, we just make the forecast a basis function and give it a negative weight.\n",
+    "\n",
+    "Next option:  Say we select a region of sky we want to observe. The next step is to tesselate it with pointings, sort the pointings using a traveling salesman solver, then copy the list if we want to take things in pairs. \n",
+    "\n",
+    "We could take our list of desired pointings, compute the expected execution times, calculate length of streaks. If there are lots of streaks, change the order of the pointings (maybe just which one we start on), and recompute. If we get to a list with no streaks, use it, otherwise, take the minimum.\n",
+    "\n",
+    "This is going to be expensive (lots of satellite positions to calculate, lots of ra,dec to alt,az conversions). We probably need to insantiate the kinematic model inside the scheduler. Tough to say if we have enough precision for this to work.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa147443",
+   "id": "32c6db5a",
    "metadata": {},
    "outputs": [],
    "source": []
