--- a/sne_check/test_sne_wfd.ipynb
+++ b/sne_check/test_sne_wfd.ipynb
@@ -107,7 +107,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Querying table None with no constraint for columns ['fiveSigmaDepth', 'numExposures', 'night', 'visitTime', 'fieldRA', 'observationId', 'visitExposureTime', 'rotSkyPos', 'observationStartMJD', 'fieldDec', 'filter'].\n",
+      "Querying table None with no constraint for columns ['observationId', 'fiveSigmaDepth', 'rotSkyPos', 'filter', 'fieldDec', 'night', 'visitTime', 'fieldRA', 'visitExposureTime', 'observationStartMJD', 'numExposures'].\n",
       "Found 2383592 visits\n",
       "Running:  ['sn']\n"
      ]
@@ -125,21 +125,7 @@
      "output_type": "stream",
      "text": [
       "Completed metric generation.\n",
-      "Running reduce methods.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/yoachim/git_repos/rubin_sim/rubin_sim/maf/metricBundles/metricBundle.py:738: FutureWarning: elementwise == comparison failed and returning scalar instead; this will raise an error or perform elementwise comparison in the future.\n",
-      "  if val == newmetric.badval:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Running reduce methods.\n",
       "Running summary statistics.\n",
       "Completed.\n",
       "Plotting figures with \"\" constraint now.\n"
@@ -160,7 +146,7 @@
      "output_type": "stream",
      "text": [
       "Plotting complete.\n",
-      "runtime= 783.0717520713806 s\n"
+      "runtime= 787.4858801364899 s\n"
      ]
     },
     {
@@ -249,9 +235,9 @@
     {
      "data": {
       "text/plain": [
-       "{'sn': <rubin_sim.maf.metricBundles.metricBundle.MetricBundle at 0x7fbf5e8df730>,\n",
-       " 'SNNSNMetric_nSN': <rubin_sim.maf.metricBundles.metricBundle.MetricBundle at 0x7fbefc028c70>,\n",
-       " 'SNNSNMetric_zlim': <rubin_sim.maf.metricBundles.metricBundle.MetricBundle at 0x7fbefbf539d0>}"
+       "{'sn': <rubin_sim.maf.metricBundles.metricBundle.MetricBundle at 0x7fcd15879940>,\n",
+       " 'SNNSNMetric_nSN': <rubin_sim.maf.metricBundles.metricBundle.MetricBundle at 0x7fcd10781dc0>,\n",
+       " 'SNNSNMetric_zlim': <rubin_sim.maf.metricBundles.metricBundle.MetricBundle at 0x7fcd118b3760>}"
       ]
      },
      "execution_count": 7,
@@ -322,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +317,7 @@
        "13.92"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
