--- a/template_metrics/template_stuff.ipynb
+++ b/template_metrics/template_stuff.ipynb
@@ -141,25 +141,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Querying table None with constraint filter = \"r\" and night < 365 for columns ['fieldRA', 'fieldDec', 'filter', 'night', 'rotSkyPos', 'observationStartMJD']\n",
+      "Querying table None with constraint filter = \"r\" and night < 365 for columns ['rotSkyPos', 'night', 'filter', 'fieldDec', 'fieldRA', 'observationStartMJD']\n",
       "Found 45934 visits\n",
       "Running:  ['opsim_CountWithTemplate_observationStartMJD_night_filter_r_and_night_lt_365_HEAL', 'opsim_Count_night_r_and_night_lt_365_HEAL']\n",
       "Completed metric generation.\n",
       "Running reduce methods.\n",
-      "Running summary statistics.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "0.0 180.0 -180.0 180.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Running summary statistics.\n",
       "Completed.\n",
       "Plotting figures with \"filter = \"r\" and night < 365\" constraint now.\n"
      ]
@@ -168,6 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "0.0 180.0 -180.0 180.0\n",
       "/Users/yoachim/git_repos/rubin_sim/rubin_sim/maf/utils/mafUtils.py:141: UserWarning: Optimal bin calculation tried to make 1038 bins, returning 200\n",
       "  warnings.warn(\n",
       "0.0 180.0 -180.0 180.0\n",
@@ -304,8 +292,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "3950d65b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# OK, now let's write a function that takes a bunch of observations in, \n",
+    "# then cuts out ones that probably don't have template images\n",
+    "\n",
+    "# Class that will return all the id's that we think have templates generated\n",
+    "class HasTemplateIndx(BaseTemplateMetric):\n",
+    "    \"\"\"Return the obIds that probably have templates\n",
+    "    \"\"\"\n",
+    "    def __init__(self, col='observationId', metricDtype=\"object\", **kwargs):\n",
+    "        super().__init__(col=col, metricDtype=metricDtype, **kwargs)\n",
+    "        self.idCol = col\n",
+    "    def run(self, dataSlice, slicePoint=None):\n",
+    "        dataSlice = self._remove_no_template_visits(dataSlice)\n",
+    "        return dataSlice[self.idCol]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "305bb3ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_no_templates(data_in, nside=32, id_col='observationId', **kwargs):\n",
+    "    \"\"\"Remove visits that probably have no templates\n",
+    "    \"\"\"\n",
+    "    slicer = maf.slicers.HealpixSlicer(nside=nside, verbose=False)\n",
+    "    metric = HasTemplateIndx(**kwargs)\n",
+    "    sql=None\n",
+    "    bundle = maf.MetricBundle(metric, slicer, sql)\n",
+    "    mbg = maf.MetricBundleGroup([bundle], None, saveEarly=False,\n",
+    "                                verbose=False)\n",
+    "    mbg.runCurrent(None, simData=data_in)\n",
+    "    all_vals = np.concatenate(bundle.metricValues.data[~bundle.metricValues.mask])\n",
+    "    valid_ids = np.unique(all_vals)\n",
+    "    indx = np.in1d(data_in[id_col], valid_ids)\n",
+    "    result = data_in[indx]\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2492794f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# let's load up some data\n",
+    "data = maf.getSimData(baseline_file, None, None, full_sql_query='select * from observations where night < 365;')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f3364d8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "215065"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ec1b5d76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "94259"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_w_templates = remove_no_templates(data)\n",
+    "data_w_templates.size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef827d34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b1dfa33",
    "metadata": {},
    "outputs": [],
    "source": []
