--- a/neo_check/ss_observations_1.ipynb
+++ b/neo_check/ss_observations_1.ipynb
@@ -64,7 +64,7 @@
    "outputs": [],
    "source": [
     "# Generate a file with all the observations containing a solar system object\n",
-    "# There's lots of potential to speed up this step, but it'll work for now.\n",
+    "# There's lots of potential to speed up this step, but it'll work for now. Takes a few hours probably\n",
     "mo.run_obs(orbits, pointing_data, colmap, out_file)"
    ]
   },
