--- a/neo_check/pha/ss_observations_2.ipynb
+++ b/neo_check/pha/ss_observations_2.ipynb
@@ -533,7 +533,103 @@
      "text": [
       "0\n",
       "1\n",
-      "2\n"
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "27\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n",
+      "38\n",
+      "39\n",
+      "40\n",
+      "41\n",
+      "42\n",
+      "43\n",
+      "44\n",
+      "45\n",
+      "46\n",
+      "47\n",
+      "48\n",
+      "49\n",
+      "50\n",
+      "51\n",
+      "52\n",
+      "53\n",
+      "54\n",
+      "55\n",
+      "56\n",
+      "57\n",
+      "58\n",
+      "59\n",
+      "60\n",
+      "61\n",
+      "62\n",
+      "63\n",
+      "64\n",
+      "65\n",
+      "66\n",
+      "67\n",
+      "68\n",
+      "69\n",
+      "70\n",
+      "71\n",
+      "72\n",
+      "73\n",
+      "74\n",
+      "75\n",
+      "76\n",
+      "77\n",
+      "78\n",
+      "79\n",
+      "80\n",
+      "81\n",
+      "82\n",
+      "83\n",
+      "84\n",
+      "85\n",
+      "86\n",
+      "87\n",
+      "88\n",
+      "89\n",
+      "90\n",
+      "91\n",
+      "92\n",
+      "93\n",
+      "94\n",
+      "95\n",
+      "96\n",
+      "97\n",
+      "98\n"
      ]
     }
    ],
@@ -561,7 +657,25 @@
    "execution_count": null,
    "id": "e63a4c7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1784\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([  10284,    9721,   10481, ..., 1619575, 1621582, 1612616])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(indx.size)\n",
     "indx"
@@ -584,14 +698,25 @@
    "execution_count": null,
    "id": "9ac43e86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1625188, 27)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "final_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4edabe04",
    "metadata": {},
    "outputs": [],
@@ -602,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4cb3ed62",
    "metadata": {},
    "outputs": [],
@@ -623,7 +748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04ea63c2",
+   "id": "474d22ae",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -631,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "510d5736",
+   "id": "c379ff7b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -639,7 +764,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21f3d05a",
+   "id": "7ccd4596",
    "metadata": {},
    "outputs": [],
    "source": []
