--- a/maf_quickstart/maf_pz_quickstart.ipynb
+++ b/maf_quickstart/maf_pz_quickstart.ipynb
@@ -35,6 +35,8 @@
     "# Need a database to work on. You can grab this one from: \n",
     "# http://astro-lsst-01.astro.washington.edu:8080/fbs_db/fbs_2.99/draft/draft_connected_v2.99_10yrs.db\n",
     "\n",
+    "# all the columns in the database documented at: https://rubin-sim.lsst.io/rs_scheduler/output_schema.html\n",
+    "\n",
     "# or just use the baseline that comes with rubin_sim\n",
     "filename = get_baseline()\n",
     "run_name = filename.replace('.db', '')\n"
