--- a/maf_quickstart/maf_pz_quickstart.ipynb
+++ b/maf_quickstart/maf_pz_quickstart.ipynb
@@ -317,6 +317,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3131f6ce",
+   "metadata": {},
+   "source": [
+    "# Run on just a DDF"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "7d2a9c9c",
