rerunning on new baseline

--- a/neo_check/pha/ss_observations_1.ipynb
+++ b/neo_check/pha/ss_observations_1.ipynb
@@ -11,27 +11,27 @@
     "import numpy as np\n",
     "import rubin_sim.moving_objects as mo\n",
     "from rubin_sim.maf.batches import col_map_dict\n",
-    "from rubin_sim.data import get_data_dir\n",
+    "from rubin_sim.data import get_data_dir, get_baseline\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "aa33bfc9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# A run that has a decent NEO survey in it\n",
-    "run_file = \"franken_v2.99_10yrs.db\"\n",
-    "run_name = run_file.replace('.db', '')\n",
+    "run_file = get_baseline()\n",
+    "run_name = os.path.basename(run_file).replace('.db', '')\n",
     "\n",
     "colmap = col_map_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "6ff30b52",
    "metadata": {},
    "outputs": [],
@@ -78,8 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9489d7cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'baseline_v3.0_10yrs__granvik_pha_5k_obs.txt'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "acc71fe4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -101,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
