--- a/neo_check/ss_observations_1.ipynb
+++ b/neo_check/ss_observations_1.ipynb
@@ -11,7 +11,7 @@
     "import numpy as np\n",
     "import rubin_sim.moving_objects as mo\n",
     "from rubin_sim.maf.batches import col_map_dict\n",
-    "from rubin_sim.data import get_data_dir\n",
+    "from rubin_sim.data import get_data_dir, get_baseline\n",
     "import os"
    ]
   },
@@ -23,15 +23,15 @@
    "outputs": [],
    "source": [
     "# A run that has a decent NEO survey in it\n",
-    "run_file = \"franken_v2.99_10yrs.db\"\n",
-    "run_name = run_file.replace('.db', '')\n",
+    "run_file = get_baseline()\n",
+    "run_name = os.path.basename(run_file).replace('.db', '')\n",
     "\n",
     "colmap = col_map_dict()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "6ff30b52",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6726376d",
    "metadata": {},
    "outputs": [],
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "a1407f2e",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
