--- a/neo_check/ss_observations_2_wide.ipynb
+++ b/neo_check/ss_observations_2_wide.ipynb
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "91a83acb",
    "metadata": {},
    "outputs": [],
@@ -539,10 +539,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e63a4c7d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "348\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([2403,  219, 1513, 2380, 5169, 2691, 2815, 5494, 4452, 4290, 2165,\n",
+       "       5391, 5776, 2514, 4659, 5493, 4803, 2881, 2080, 5169, 4354, 5969,\n",
+       "       2140,  552, 3480, 2871, 1723, 4771, 5129, 5372,  878,  870, 2643,\n",
+       "       5610, 2761, 3275, 4995, 4214,  446, 1216, 2153,  457, 2016, 5004,\n",
+       "       3084, 1059,  662, 1997, 3270, 3283, 3582,  818, 2594, 3749, 4290,\n",
+       "        990, 2989, 5721,  541, 6090, 2656, 3305, 3999, 3403, 2876, 2803,\n",
+       "       5846, 1361,  597, 2012, 4068, 4098,  742, 6089, 3046,  653, 5303,\n",
+       "        231, 4018, 4104, 2066, 3746, 1519, 4190, 2510,  487, 3245, 3823,\n",
+       "       2706, 3047,  384, 4888, 5425, 1558, 5165, 4909, 5367, 5950, 1614,\n",
+       "        173, 2919,  326,  837, 2683, 2280, 1300,  480, 5843, 1637, 4231,\n",
+       "       5701, 2983, 5774, 4189, 1854, 4410, 1434, 4773, 4615, 2035, 2006,\n",
+       "       5754, 3961, 3885,  599, 4625, 6063,  514,  661,  546, 1046, 5026,\n",
+       "       5158, 3860, 1261, 2019, 1428, 3071, 2911, 3009, 1786, 3892, 4513,\n",
+       "       5492, 2806,  867, 2941, 5158, 3000,  395, 1403, 3181, 5468, 4560,\n",
+       "       1862, 1640, 1672, 3085, 2811,  782, 3839,  391, 1385,  432, 1575,\n",
+       "       1614, 1996, 3282, 5021,  492, 2070, 4671, 2656, 2783, 3305,  984,\n",
+       "       2466, 3368, 5538, 4379, 5145, 2247, 2710, 3338,  527, 3114, 5638,\n",
+       "       6064, 5198,   96, 3269, 4027, 4317, 2193, 1890, 2928, 2897,  527,\n",
+       "       5684, 4161, 2008, 3653, 3617, 4159, 3547,  169, 5564,  862, 2273,\n",
+       "       3187, 6002, 2945, 4107, 4627, 4013, 3917, 4007,  182, 4202,  642,\n",
+       "        960, 3008, 3916, 1559, 1204, 5410, 2303, 2310, 3018, 2475,  697,\n",
+       "       5900,  198,  193, 1518, 1141,  643, 1869,  368, 2422, 3766, 3530,\n",
+       "       2905,   88,   39, 1269, 1699, 6089, 5519, 6029, 2105, 3921, 5761,\n",
+       "       1719, 1087, 1086, 1712,  447, 3337, 3583,  454, 1831, 2195, 3177,\n",
+       "       4971, 5184, 1914, 1378, 2278, 3540,   92, 5590, 1499, 2960, 6067,\n",
+       "       1314,  439, 5151, 3782,   36,  949,  306, 2467, 1068, 5621, 2252,\n",
+       "       4356, 5366, 5648, 2793, 5142, 1147, 2082,  213, 5662, 6015, 5566,\n",
+       "       3314,  753, 3106, 4486,  666, 4570, 5678,  673, 2446, 2688, 5948,\n",
+       "         73, 1017, 2086, 1037, 3744,  669, 1978, 3834, 4391, 2397, 5106,\n",
+       "       1502, 2395, 4060, 5552, 5533, 5731, 4084, 5654,  676,  834, 2626,\n",
+       "        915, 1868, 3571, 2536, 4407, 3306, 4232, 5697,  773,  924,  178,\n",
+       "       1783,   55, 5525, 5836, 1890, 2793, 5932])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "print(indx.size)\n",
     "indx"
@@ -550,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c4fd8d6e",
    "metadata": {},
    "outputs": [],
@@ -562,17 +611,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9ac43e86",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5765, 27)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "final_data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "4edabe04",
    "metadata": {},
    "outputs": [],
@@ -583,12 +643,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "4cb3ed62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05702113714566607"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "36/6783"
+    "indx.size/len(ss_objects)"
    ]
   },
   {
@@ -597,9 +668,15 @@
    "id": "a441e779",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#Wow, I think this exactly matches what we had in the paper as well. 0.4% loss of detections. "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eedc2f39",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
